--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11,7 +11,6 @@ body {
 
 .top_bar {
   position: fixed;
-  /* display: block; */
   box-sizing: border-box;
   width: 100%;
   height: 98.56px;
@@ -53,6 +52,16 @@ body {
   right: 6.7%;
   top: 11px;
 }
+
+@media (min-width: 512px) {
+  .top_bar_contact {
+    right: 135px;
+  }
+  .top_bar_yellow_phone {
+    right: 37.96px;
+  }
+}
+
 
 .main_banner {
   height: 543.68px;
