--- a/about_us/assets/style.css
+++ b/about_us/assets/style.css
@@ -481,11 +481,11 @@ body {
 }
 
 .footer_section {
-  background-image: url("images/footer_background.png");
+  /* background-image: url("images/footer_background.png"); */
   box-sizing: border-box;
   width: 100%;
-  height: 292.02px;
-  background-size: 100% 100%;
+  /* height: 292.02px;
+  background-size: 100% 100%; */
   display: block;
   text-align: center;
   margin-top: 80px;
@@ -517,7 +517,7 @@ body {
 }
 
 #contact {
-  padding-bottom: 20px;
+  margin-bottom: 0rem;
 }
 @media (min-width: 681px) {
   .box_left2 {
