--- a/about_us/assets/style.css
+++ b/about_us/assets/style.css
@@ -113,6 +113,9 @@ body {
 .main_banner_text_smaller {
   color: white;
   font-size: 20px;
+}.main_banner_text_smaller_smaller {
+  color: white;
+  font-size: 15px;
 }
 
 .come_join_us {
